[package]
name = "myox_video_downloader"
version = "0.1.0"
authors = ["Konstantin Matsiushonak <konstantin_matsiushonak@epam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
regex = "1.4.1"
reqwest = { version = "0.10.8", features = ["blocking"] }
serde_json = "1.0"
qstring = "0.7.2"


